loaded all images behind one another so that transitions are smoother (since smaller screens would take more time to load the image into a smaller space unless I worsened the quality of the image). I also fixed some of the diffrent screen size bugs for the main page.

--- a/style.css
+++ b/style.css
@@ -176,19 +176,62 @@ body{
     overflow: hidden;
 }
 
-#backgroundOfMainPage{
+.backgroundOfMainPage{
     border-radius: 25px;
     margin-top: 25px;
     width: 80%;
     height: 70%;
-    background-color: rgb(146, 199, 203);
-    background-image: url(background1.jpeg);
+    background-color: rgb(0, 0, 0);
+    
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-#blackFade{
+#backgroundOfMainPage1{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url(background1.jpeg);
+}
+
+#backgroundOfMainPage2{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url(background2.jpeg);
+}
+
+#backgroundOfMainPage3{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url(background3.jpeg);
+    background-position: bottom;
+}
+#backgroundOfMainPage4{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url(background4.jpeg);
+}
+
+#backgroundOfMainPage5{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url(background5.jpeg);
+}
+
+#backgroundOfMainPage6{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url(background6.jpeg);
+}
+
+
+.blackFade{
     width: 100%;
     height: 100%;
     border-radius: 25px;
@@ -196,6 +239,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 500;
 }
 
 #namePetar{
@@ -209,10 +253,9 @@ body{
 }
 
 #namePetar:hover{
-    margin: 0px;
     letter-spacing: 15px;
-    
 }
+
 
 #nameIsakovic{
     margin: 0px;
@@ -230,6 +273,75 @@ body{
 
 #nameIsakovic:hover{
     letter-spacing: 15px;
+}
+
+@media screen and (max-width: 1040px) {
+    #namePetar{
+        font-size: 115px;
+    }
+    #nameIsakovic{
+        font-size: 115px;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    #namePetar{
+        font-size: 100px;
+    }
+    #nameIsakovic{
+        font-size: 100px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    #namePetar{
+        font-size: 100px;
+        padding: 0px;
+    }
+    #nameIsakovic{
+        font-size: 100px;
+        padding: 0px;
+    }
+    .blackFade{
+        justify-content: center;
+    }
+}
+
+
+@media screen and (max-width: 751px) {
+    #namePetar{
+        font-size: 80px;
+    }
+    #nameIsakovic{
+        font-size: 80px;
+    }
+}
+
+@media screen and (max-width: 631px) {
+    #namePetar{
+        font-size: 60px;
+    }
+    #nameIsakovic{
+        font-size: 60px;
+    }
+}
+
+@media screen and (max-width: 515px) {
+    #namePetar:hover{
+        letter-spacing: normal;
+    }
+    #nameIsakovic:hover{
+        letter-spacing: normal;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    #namePetar{
+        text-align: center;
+    }
+    #nameIsakovic{
+        text-align: center;
+    }
 }
 
 #nameP{
@@ -327,7 +439,7 @@ body{
 }
 
 #movingText{
-    font-size: 100px;
+    font-size: 10vh;
     align-self: normal;
     overflow: hidden;
     white-space: nowrap;
